# udp_template

./: CMakeLists.txt
executable/client/: CMakeLists.txt  ClientMain.cpp
executable/server/: CMakeLists.txt  ServerMain.cpp
src/bedrock/: CMakeLists.txt
src/job_system/: CMakeLists.txt  ScopeLock.hpp  ScopeProfiler.hpp
